.mypy-3d-report.txt
tests/test_alembic_configuration.py:14: error: Argument 1 to "Path" has
incompatible type "str | None"; expected "str | PathLike[str]"  [arg-type]
        script_location = Path(config.get_main_option("script_location"))
                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Found 1 error in 1 file (checked 66 source files)
